<resources>
    <string name="app_name">BaseProject</string>

    <!-- User -->
    <string name="user_stats">User statistics</string>
    <string name="user_record_weakling">Record Weakling: %d</string>
    <string name="user_record_terminator">Record Terminator: %d</string>
    <string name="user_attempts">Attempts: %d</string>
    <string name="user_social_status">Social Status: %s</string>
    <string name="user_score">%1$s: %2$d</string>
    <string name="user_win">Win</string>
    <string name="user_lose">Lose</string>
    <string name="user_start_game">Start</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_social_status">Social status:</string>
    <string name="settings_difficulty">Difficulty:</string>
    <string name="settings_truth">At parties don\'t mind\nsinging along to the song\nof Morgenstern - ПОСОСИ</string>
    <string name="settings_save">Save</string>
    <string name="settings_impostor_dialog_title">Impostor?</string>
    <string name="settings_impostor_dialog_description">Something tells me that you are not Bogdan -_-. Don\'t try to fool me!</string>
    <string name="settings_impostor_dialog_button">Run!</string>
    <string name="settings_warning_dialog_title">Warning</string>
    <string name="settings_warning_dialog_description">On this difficulty, you will receive less extra time after each cycle!
        If you win this difficulty, I will add your name to the bible as a saint</string>
    <string name="settings_warning_dialog_button">Mmmm, okay</string>
    <string-array name="settings_social_status_array">
        <item>Nazi</item>
        <item>Pregnant</item>
        <item>Alcoholic</item>
        <item>Lukashenka</item>
        <item>Kitty</item>
        <item>On pills</item>
        <item>Bogdan</item>
    </string-array>
    <string-array name="settings_difficulty_array">
        <item>Weakling</item>
        <item>Terminator</item>
    </string-array>

    <!-- Game -->
    <string name="game_stop">Stop the Game</string>
    <string name="game_rules">Press the buttons in the correct\norder and get %d scores to win</string>
    <string-array name="game_words_array">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
        <item>eight</item>
        <item>nine</item>
    </string-array>
    <string name="game_score">%d scores</string>
    <string name="game_win_title">Have you won?</string>
    <string name="game_win_alcoholic_description">You won, of course, but instead of playing you\'d better go Alcoholics Anonymous and get some medical treatment</string>
    <string name="game_win_pregnant_description">This is a victory, but if you are a pregnant guy, I advise you to see a doctor in Novinki.</string>
    <string name="game_win_nazi_description">It\'s good that my game is just button presses. If the game had a button to start a holocaust, would you press it, Nazi?</string>
    <string name="game_win_lukashenka_description">Where did you get the strength to play this game and win, old man. I thought you only know how to fly on a helicopter with Kalash</string>
    <string name="game_win_kitty_description">HOW DID YOU DO THAT?? YOU HAVE A PAWS !!</string>
    <string name="game_win_on_pills_description">It is sad that this game has not yet been equated with a sports discipline. Otherwise, for pills, I would give bans by IP -_-</string>
    <string name="game_win_bogdan_description">It seems to me that you are not Bogdan -_-, he would never have scored so many scores, run the impostor!</string>
    <string name="game_lose_title">Not today, bro:)</string>
    <string name="game_lose_alcoholic_description">You have lost, but that doesn\'t mean that you need to take up the bottle right away. And most importantly, don\'t sit on it !!</string>
    <string name="game_lose_pregnant_description">I don\'t know what could be worse, losing a child\'s game or getting pregnant at 16. What do you think?</string>
    <string name="game_lose_nazi_description">Lost 1945 and lost in a child\'s play, Nazi)</string>
    <string name="game_lose_lukashenka_description">I made this game sitting in white-red-white socks, old man, so you can\'t win!</string>
    <string name="game_lose_kitty_description">Don\'t be upset, Kitty, sooner or later humanity will self-destruct and you will be the winner in the survival game, but not today)</string>
    <string name="game_lose_on_pills_description">Hope you\'re on diarrhea pills now because you fucked up</string>
    <string name="game_lose_bogdan_description">Okay, let\'s believe that you are Bogdan, he would never have won this game</string>
    <string name="game_cancel">Cancel</string>

    <!--Achievements -->
    <string name="achievements">Achievements %1$d/%2$d</string>
    <string name="achievements_nazi_title">Holocaust? No, I have not heard</string>
    <string name="achievements_nazi_description">Win on high difficulty as Nazi</string>
    <string name="achievements_pregnant_title">Pregnant at 16</string>
    <string name="achievements_pregnant_description">Win on high difficulty and become an iamthemother</string>
    <string name="achievements_alcoholic_title">Drink only vodka</string>
    <string name="achievements_alcoholic_description">Win on high difficulty while drunk</string>
    <string name="achievements_lukashenka_title">Enemy of the people</string>
    <string name="achievements_lukashenka_description">Win on high difficulty as Dictator</string>
    <string name="achievements_kitty_title">I have paws</string>
    <string name="achievements_kitty_description">Win on high difficulty by being soft and fluffy</string>
    <string name="achievements_on_pills_title">Didn\'t pass a doping test</string>
    <string name="achievements_on_pills_description">Win on high difficulty playing on pills in the mental hospital</string>
    <string name="achievements_bogdan_title">Mom\'s friend\'s son</string>
    <string name="achievements_bogdan_description">Become successful</string>
    <string name="achievements_loser_title">I\'m just watching</string>
    <string name="achievements_loser_description">Lose in disgrace</string>
    <string name="achievements_truth_title">Truth can be cruel</string>
    <string name="achievements_truth_description">Accept truth and it\'ll stay with you forever</string>
    <string name="achievements_weakling_title">Easy win</string>
    <string name="achievements_weakling_description">Win on easy difficulty as a weakling</string>
    <string name="achievements_dialog_be_cool_title">Be cool</string>
    <string name="achievements_dialog_be_cool_description">If you get all the achievements in this game, you can quit the company.
        Or is it just an attempt to make you play?</string>
    <string name="achievements_dialog_be_cool_button">I can escape</string>
    <string name="achievements_toast_text">You have a new achievement!</string>

    <!-- Share Phrase -->
    <string name="generator_nazi">Difficulty: %1$s. I scored %2$d points in this damn game and became the hero of my nation. And in this stinking country, i showed the ridge and that\'s it, they put me on the bottle.</string>
    <string name="generator_pregnant">Difficulty: %1$s. I have %2$d points in this game and in my opinion everyone should envy my speed! Especially my partner, who did not have enough speed to stick out in time.</string>
    <string name="generator_alcoholic">Difficulty: %1$s. I have %2$d points and I have no idea what that means, because in sorrow and in joy I drink. Let\'s go for a drink, huh?</string>
    <string name="generator_lukashenka">Difficulty: %1$s. I got %2$d points and I can say one thing! There are no viruses in this game, you haven\'t noticed that they fly, do you? Nope, and I don\'t see either.</string>
    <string name="generator_kitty">Difficulty: %1$s. I scored %2$d points, which is more than the average human can score. And I don\'t even have fingers!</string>
    <string name="generator_on_pills">Difficulty: %1$s. I scored %2$d points and you know, I am so filled in my knowledge, as if I have lived for 100 trillion billion years on trillions and trillions of the same planets. Well, either it\'s about the pills I\'m taking.</string>
    <string name="generator_bogdan">Difficulty: %1$s. I scored %2$d points in my own game. And it doesn\'t matter, because the rules are written by me, but if the number of points in the previous sentence is prohibitive, then I am proud of myself!</string>
    <string name="generator_additional">Difficulty: %1$s. I got %2$d points in this damn game. Here I have caught so many insults that now I need the help of a psychologist, thank you!</string>

    <!-- Errors -->
    <string name="generic_error">Something went wrong. Please try later.</string>
    <string name="server_error">Server error. Please try later.</string>
    <string name="timeout_error">Timeout error. Please try again when network stabilizes.</string>
    <string name="no_internet_connection_error">No internet connection. Please check the internet.</string>
    <string name="unauthorized_error">Unauthorized error. Please sign-in and try again.</string>
    <string name="not_found_error">404 error. Please try later.</string>
    <string name="bad_request_error">400 error. Bad request. Please try later.</string>
    <string name="account_already_exists_error">An account with this nickname already exists</string>
    <string name="account_does_not_exist_error">No such account exists. Check the correctness of the entered account name</string>
    <string name="empty_filed_error">This field must be filled</string>
    <string name="invalid_email_error">Please enter a valid email address</string>
    <string name="forbidden_max_length_error">Maximum 50 characters</string>
    <string name="invalidate_name_error">Name must start with a letter and be 12 characters long: letters from a to z, numbers from 1 to 5</string>

</resources>