<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_result_game_dialog">

    <TextView
        android:id="@+id/tvDialogTitle"
        style="@style/TvStatsParams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_20"
        android:layout_marginTop="@dimen/margin_padding_size_20"
        android:layout_marginEnd="@dimen/margin_padding_size_20"
        android:gravity="center"
        android:text="@string/game_lose_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogDescription"
        style="@style/TvGameStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_size_20"
        android:layout_marginTop="@dimen/margin_padding_size_16"
        android:layout_marginEnd="@dimen/margin_padding_size_20"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
        tools:text="@string/game_win_alcoholic_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelLoseDialog"
        style="@style/ButtonDialog"
        android:layout_width="wrap_content"
        android:text="@string/game_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>